--- a/public-site.html
+++ b/public-site.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
-<meta charset="UTF-8">
-<title>Public Türk Riders Site Demo</title>
-<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css" rel="stylesheet">
-<style>
-#kmScoreboard { position: fixed; bottom: 10px; right: 10px; width: 250px; background:white; border:1px solid #ccc; padding:10px; }
-</style>
+  <meta charset="UTF-8">
+  <title>Türk Riders - Scoreboard</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #111; color: #fff; text-align: center; }
+    h1 { margin-top: 30px; }
+    table { margin: 20px auto; border-collapse: collapse; width: 60%; }
+    th, td { border: 1px solid #666; padding: 10px; }
+    th { background: #222; }
+    td { background: #333; }
+  </style>
 </head>
 <body>
-<div class="container">
-<h1>Türk Riders Public Site Demo</h1>
-<p>Normal site içerikleri burada...</p>
-</div>
+  <h1>Yıllık KM Sıralaması</h1>
+  <table id="scoreboard">
+    <thead>
+      <tr><th>Üye</th><th>Toplam KM</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-<!-- Scoreboard -->
-<div id="kmScoreboard">
-<h5>KM Scoreboard</h5>
-<table class="table table-condensed">
-<thead><tr><th>Nick</th><th>KM</th></tr></thead>
-<tbody></tbody>
-</table>
-</div>
+  <script>
+    // Liste sitesinde localStorage’a kaydedilen veriyi çeker
+    const members = JSON.parse(localStorage.getItem('kmData')) || [];
+    const tbody = document.querySelector('#scoreboard tbody');
 
-<script>
-const tbody = document.querySelector('#kmScoreboard tbody');
+    // KM’ye göre sırala
+    members.sort((a, b) => b.km - a.km);
 
-function updateScoreboard(){
-  const scores = JSON.parse(localStorage.getItem('scores') || '{}');
-  tbody.innerHTML = '';
-  Object.entries(scores).sort((a,b)=>b[1]-a[1]).forEach(([nick,km])=>{
-    const tr = document.createElement('tr');
-    tr.innerHTML=`<td>${nick}</td><td>${km}</td>`;
-    tbody.appendChild(tr);
-  });
-}
-
-// 2 saniyede bir güncelle
-setInterval(updateScoreboard,2000);
-updateScoreboard();
-</script>
+    // Tabloya ekle
+    members.forEach(m => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${m.name}</td><td>${m.km}</td>`;
+      tbody.appendChild(tr);
+    });
+  </script>
 </body>
 </html>
